--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,9 +9,6 @@ body {
 
 h1 {
     text-align: center;
-}
-
-h3 {
     text-decoration: underline;
 }
 
@@ -37,6 +34,7 @@ h3 {
     overflow: scroll;
     margin-top: 12px;
     margin-bottom: 12px;
+    border: 3px solid #b8bcb9;
 }
 .chat-input-container {
     position: relative;
