--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,22 +11,23 @@ body {
     text-align: center;
 }
 .header h1 {
-    text-decoration: underline;
-    margin-bottom: 0;
-}
-.header p {
-    margin: 0 0 12px 0;
+    margin: 0;
 }
 
 .webrtc-heading {
     margin-bottom: 6px;
 }
-.webrtc-heading h3 {
-    display: inline-block;
+.webrtc-heading h2 {
     margin: 0;
+    float: left;
 }
 .webrtc-heading span {
     float: right;
+}
+.webrtc-heading:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 #connect-button {
