--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -61,21 +61,42 @@ body {
 
 .chat-message-bubble {
     width: 75%;
-    margin-top: 6px;
+    margin-top: 12px;
     padding: 12px;
+    position: relative;
 }
 .chat-message-bubble:last-child {
-    margin-bottom: 6px;
+    margin-bottom: 12px;
+}
+.chat-message-bubble:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
 }
 .chat-message-bubble.message-sent {
     background-color: #afd3b4;
     float: left;
     margin-left: 6px;
 }
+.chat-message-bubble.message-sent:after {
+    bottom: 100%;
+    left: 12px;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 12px solid #afd3b4;
+}
 .chat-message-bubble.message-received {
     background-color: #73d184;
     float: right;
     margin-right: 6px;
+}
+.chat-message-bubble.message-received:after {
+    top: 100%;
+    right: 12px;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-top: 12px solid #73d184;
 }
 
 .chat-message {
